# simple-rhythm-game

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: tracks.py
backend/app/services/: beatmap_gen.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/game/: GameCanvas.tsx
frontend/src/pages/: GamePage.tsx
