[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "scipy>=1.17.1",
    "uvicorn>=0.47.0",
]
